<resources>
    <string name="app_name">OfuqProject</string>
    <string name="message_email">تم الإرسال بنجاح!</string>
    <string name="message_email2">لقد أرسلنا لك رسالة على بريدك الإلكتروني \nلتفعيل حسابك </string>
    <string name="message_email3">يرجى التحقق من صندوق الوارد</string>
    <string name="button_text">العودة للرئيسية</string>
    <string name="who_you">من أنت ؟</string>
    <string name="hello">أهلاً بك أيها البطلّ!</string>
    <string name="child">أنا طفل</string>
    <string name="lets_go">هيا نبدأ اللعب</string>
    <string name="parent_tit1">أنا أب أو أم \nأو مربي</string>
    <string name="parent_dist">لإدارة حساب طفلي</string>

    <string name="data_children">بيانات الطفل</string>
    <string name="children_name">اسم الطفل</string>
    <string name="age">العمر</string>
    <string name="gender">الجنس</string>
    <string name="next">التالي</string>
    <string name="parent_data"> بيانات ولي الأمر </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fourth_story">كان هناك بالون أزرق صغير يحب اللعب مع الأطفال، لكنه في أحد الأيام وقف وحده في الحديقة وشعر بالحزن، لأنه ظن أن لم يعد أحداً يهتم به.
مرت طفلة اسمها ليان ورأت البالون حزينًا، فقالت له: "لماذا تبدو حزينًا؟ "
أجاب البالون: "أشعر أن الجميع نسيني."
        ابتسمت ليان وقالت: "أحيانًا نشعر بالحزن، لكن هذا لا يعني أن أحدًا لا يحبنا...</string>
    <string name="fourth_story_part2">أمسكت بخيط البالون، وبدأت تلعب معه وتضحك، ثم انضم باقي الأطفال إليهما. امتلأت الحديقة بالضحكات، وعاد البالون سعيدًا كما كان.
في نهاية اليوم قال البالون: "تعلمت أن أتحدث عن مشاعري، فالكلام يجعل الحزن أخف."
    </string>
    <string name="first_story">في السماء الواسعة، كانت تعيش الغيمة "غضوب".

كانت تغضب من أقل شيء! تتضايق من الرياح، فتنتفخ ويتغير لونها للأسود، وتبدأ بالصراخ وأصوات الرعد: "بوم! بوم!"، مما جعل الجميع يبتعد عنها.

في يوم من الأيام، شعرت بثقل كبير وبأنها متعبة من كثرة الغضب. أقبلت عليها ريح لطيفة وقالت لها بهدوء:

"جربي أن تتنفسي ببطء وتطلقي سراح هذا الثقل."</string>

    <string name="first_story_part2">أخذت غضوب نفساً عميقاً... وعندما زفرته، لم يخرج رعدٌ أو برق، بل هطلت قطرات مطر دافئة وخفيفة.

مع كل قطرة تسقط، كان سوادها يختفي، حتى عادت بيضاء ناصعة وخفيفة جداً، وابتسمت لها الشمس ليرسم قوس قزح حولها.

</string>
    <string name="second_story">في غابةٍ هادئة، كان يعيش أسد صغير اسمه ليث. كان يحب مساعدة الجميع، لكنه كان يخاف من تجربة الأشياء الجديدة.
في صباح أحد الأيام، سقط فرخ عصفور من عشه المرتفع، ولم تستطع الحيوانات الوصول إليه.
قالت الحيوانات: "من يستطيع مساعدته؟"
شعر ليث بالخوف، لكنه قرر أن يحاول. تسلق صخرة كبيرة بحذر، ثم رفع فرخ العصفور بلطف حتى عاد إلى عشه.</string>

    <string name="second_story_part2">فرحت أم العصفور كثيرًا وقالت: "شكرًا لك يا ليث، لقد أنقذت صغيري."
ابتسم ليث وقال: "كنت خائفًا، لكنني تعلمت أن الشجاعة تعني أن نحاول فعل الخير حتى لو شعرنا بالخوف."
صفقت جميع الحيوانات للأسد الصغير، وأصبح مثالًا للشجاعة والمحبة في الغابة.</string>

    <string name="third_story">
        كان هناك أرنب صغير اسمه رورو، يحب اللعب مع أصدقائه، لكنه كان يرى حيوانًا يجلس وحده كل يوم، ولا يشارك أحدًا اللعب.
        اقترب رورو منه بلطف وقال: "هل تود أن تلعب معنا؟"
        ابتسم الحيوان الصغير بخجل وقال: "كنت أخاف أن يرفضني الجميع."
    </string>
    <string name="third_story_part_2">أمسك رورو بيده، وعرّفه على أصدقائه، وبدأوا يلعبون ويضحكون معًا.
        في نهاية اليوم، قال الحيوان الصغير: "شكرًا يا رورو، لقد جعلتني أشعر بالسعادة وأن لدي أصدقاء."
        ابتسم رورو وقال: "اللطف يجعل قلوبنا أكبر، ويمنح السعادة للجميع."</string>

</resources>