<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_email_check"
    android:orientation="vertical"
    android:background="@drawable/email_background"
    tools:ignore="NamespaceTypo">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/email"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="20dp"
         />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_email"
        android:layout_gravity="center_horizontal"
        android:textColor="#9361ED"
        android:textSize="30sp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message_email2"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="#9361ED"
        android:textSize="20sp"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_email3"
        android:layout_gravity="center_horizontal"
        android:textColor="#9361ED"
        android:textSize="20sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:layout_marginTop="30dp"
        android:text="@string/button_text"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"

        />
    <ImageView
        android:layout_width="350dp"
        android:layout_height="180dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/tree"/>


</LinearLayout>