<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".children_login_screen"
    android:background="@drawable/background_children_login"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/img_arrow3"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="25dp"
            android:background="@drawable/circle_purple_background"
            android:padding="4dp"
            android:src="@drawable/outline_arrow_back_24"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="50dp"
            android:text="@string/data_children"
            android:textColor="@color/purple"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:layout_width="400dp"
        android:layout_height="303dp"
        android:src="@drawable/child_login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@drawable/rounded_input_background"
        android:gravity="center_vertical"
        android:paddingHorizontal="15dp"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="20dp">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/outline_child_care_24"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/children_name"
            android:textColor="@color/purple"
            android:textSize="17sp"
            android:layout_marginStart="20dp"
            />

        <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginRight="10dp"

            android:layout_weight="1"
            android:background="#00000000"
            android:hint="اكتب اسم الطفل"
            android:inputType="textPersonName" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@drawable/rounded_input_background"
        android:gravity="center_vertical"
        android:paddingHorizontal="15dp"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="20dp">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/outline_calendar_today_24"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textColor="@color/purple"
            android:textSize="17sp"
            android:layout_marginStart="20dp"
            />

        <EditText
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:hint="اكتب عمرك"
            android:inputType="number" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/purple"
        android:text="هيا نبدأ"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:padding="0dp"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"
        android:elevation="8dp"
        android:translationZ="4dp"
        android:stateListAnimator="@null"
        >
    </Button>

</LinearLayout>